--- a/custom.css
+++ b/custom.css
@@ -1,16 +1,15 @@
 #TOC {
 position: fixed;
-left: 0px;
-top: 0px;
-right: 0px;
-width: 200px !important;
+left: 0;
+top: 0;
+width: 250px;
 height: auto;
-overflow: auto;
+overflow:auto;
 }
 
-body .main-container{
-  max-width: 175% !important;
-  margin-left: -300px !important;
-  margin-right: 0px !important;
+body {
+  max-width: 1800px;
+  margin: auto;
+  margin-left:210px;
   line-height: 20px;
 }
